@@ -135,6 +135,9 @@ BUG FIXES
     o	[g]sub(fixed=TRUE, useBytes=FALSE) could substitute in the
 	wrong place in an MBCS locale.
 
+	gregexpr() could give incorrect answers in MBCS locales for
+	perl = TRUE or fixed = TRUE (unless useBytes = TRUE).
+
     o	legacy quartz() device no longer crashes in locator when the
 	user attempts to close the window
 
